# libpeconv

./: .appveyor.yml  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  _r_e_a_d_m_e_8md.html  annotated.html  buffer__util_8cpp.html  buffer__util_8cpp_source.html  buffer__util_8h.html  buffer__util_8h_source.html  caves_8cpp.html  caves_8cpp_source.html  caves_8h.html  caves_8h_source.html  class_apply_reloc_callback-members.html  class_apply_reloc_callback.html  class_apply_reloc_callback__inherit__graph.map  class_apply_reloc_callback__inherit__graph.md5  class_apply_reloc_callback_a05d0f3ac1d7ddc6078c0ff6f64fac6bf_cgraph.map  class_apply_reloc_callback_a05d0f3ac1d7ddc6078c0ff6f64fac6bf_cgraph.md5  class_apply_reloc_callback_a09cde4a31ccf84a41b1343cd8ce0d646_cgraph.map  class_apply_reloc_callback_a09cde4a31ccf84a41b1343cd8ce0d646_cgraph.md5  class_collect_imports_callback-members.html  class_collect_imports_callback.html  class_collect_imports_callback__inherit__graph.map  class_collect_imports_callback__inherit__graph.md5  class_collect_imports_callback_a0069b38fe8b2d34344ec638e34b29e55_cgraph.map  class_collect_imports_callback_a0069b38fe8b2d34344ec638e34b29e55_cgraph.md5  class_collect_imports_callback_a79a9bfe9a459748de2fee4d147e7dc41_cgraph.map  class_collect_imports_callback_a79a9bfe9a459748de2fee4d147e7dc41_cgraph.md5  class_collect_imports_callback_ad0c334e255bfc79cfe05d9610e2efbc6_cgraph.map  class_collect_imports_callback_ad0c334e255bfc79cfe05d9610e2efbc6_cgraph.md5  class_collect_thunks_callback-members.html  class_collect_thunks_callback.html  class_collect_thunks_callback__inherit__graph.map  class_collect_thunks_callback__inherit__graph.md5  class_collect_thunks_callback_a189e21e91623b9e0ebe733ab47d180fa_cgraph.map  class_collect_thunks_callback_a189e21e91623b9e0ebe733ab47d180fa_cgraph.md5  (+1116 more)
demo/: CMakeLists.txt  file_helper.cpp  main.cpp
html/: annotated.html  buffer__util_8cpp.html  buffer__util_8cpp__incl.map  buffer__util_8cpp__incl.md5  buffer__util_8cpp_source.html  buffer__util_8h.html  buffer__util_8h__dep__incl.map  buffer__util_8h__dep__incl.md5  buffer__util_8h__incl.map  buffer__util_8h__incl.md5  buffer__util_8h_source.html  caves_8cpp.html  caves_8cpp__incl.map  caves_8cpp__incl.md5  caves_8cpp_source.html  caves_8h.html  caves_8h__dep__incl.map  caves_8h__dep__incl.md5  caves_8h__incl.map  caves_8h__incl.md5  caves_8h_source.html  classes.html  classpeconv_1_1_exported_func-members.html  classpeconv_1_1_exported_func.html  classpeconv_1_1_exported_func_a757f8be3c6b0a7a4b983c8824d663ffd_icgraph.map  classpeconv_1_1_exported_func_a757f8be3c6b0a7a4b983c8824d663ffd_icgraph.md5  classpeconv_1_1_exported_func_adb7ea698345ad68032fd15dc038dad26_icgraph.map  classpeconv_1_1_exported_func_adb7ea698345ad68032fd15dc038dad26_icgraph.md5  classpeconv_1_1_exported_func_af723125e547c1e1459dbcd0a4ac02d0a_icgraph.map  classpeconv_1_1_exported_func_af723125e547c1e1459dbcd0a4ac02d0a_icgraph.md5  classpeconv_1_1_exports_mapper-members.html  classpeconv_1_1_exports_mapper.html  classpeconv_1_1_exports_mapper_a5f4a8cca1355d93d1d71a01d51fc843c_icgraph.map  (+669 more)
libpeconv/: CMakeLists.txt  peconv.h
libpeconv/include/: module_helper.h  pe_hdrs_helper.h  pe_loader.h  pe_raw_to_virtual.h  pe_virtual_to_raw.h  peconv.h  relocate.h  remote_pe_reader.h  unicode.h  util.h
libpeconv/include/peconv/: buffer_util.h  cave.h  caves.h  delayed_imports_loader.h  exceptions_parser.h  exported_func.h  exports_lookup.h  exports_mapper.h  file_util.h  find_base.h  fix_imports.h  function_resolver.h  hooks.h  imports_loader.h  imports_uneraser.h  load_config_defs.h  load_config_util.h  load_imports.h  logger.h  module_helper.h  pe_dumper.h  pe_hdrs_helper.h  pe_loader.h  pe_mode_detector.h  pe_raw_to_virtual.h  pe_virtual_to_raw.h  peb_lookup.h  process_explorer.h  relocate.h  remote_pe_reader.h  resource_parser.h  resource_util.h  tls_parser.h  unicode.h  util.h
libpeconv/src/: buffer_util.cpp  cave.cpp  caves.cpp  delayed_imports_loader.cpp  exceptions_parser.cpp  exported_func.cpp  exports_lookup.cpp  exports_mapper.cpp  file_util.cpp  find_base.cpp  fix_dot_net_ep.cpp  fix_dot_net_ep.h  fix_imports.cpp  function_resolver.cpp  hooks.cpp  imports_loader.cpp  imports_uneraser.cpp  load_config_util.cpp  load_imports.cpp  module_helper.cpp  ntddk.h  pe_dumper.cpp  pe_hdrs_helper.cpp  pe_loader.cpp  pe_mode_detector.cpp  pe_raw_to_virtual.cpp  pe_virtual_to_raw.cpp  peb_lookup.cpp  process_explorer.cpp  relocate.cpp  remote_pe_reader.cpp  resource_parser.cpp  resource_util.cpp  tls_lookup.cpp  tls_parser.cpp  util.cpp
pe_unmapper/: CMakeLists.txt  README.md  main.cpp
run_pe/: CMakeLists.txt  README.md  main.cpp  patch_ntdll.cpp  patch_ntdll.h  run_pe.cpp  run_pe.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  (+138 more)
tests/: CMakeLists.txt  file_helper.cpp  file_helper.h  main.cpp  resource.h  resource.rc  resource_helper.cpp  resource_helper.h  shellc32.h  shellc64.h  shellcodes.h  test_crackme_f4_3.cpp  test_crackme_f4_3.h  test_crackme_f4_6.cpp  test_crackme_f4_6.h  test_delayed_imps.cpp  test_delayed_imps.h  test_exceptions.cpp  test_exceptions.h  test_fix_dotnet.cpp  test_fix_dotnet.h  test_format_detect.cpp  test_format_detect.h  test_found_base.cpp  test_found_base.h  test_hooking_imps.cpp  test_hooking_imps.h  test_hooking_local.cpp  test_hooking_local.h  test_imp_list.cpp  test_imp_list.h  test_imports_mix.cpp  test_imports_mix.h  test_load_ntdll.cpp  test_load_ntdll.h  test_loading.cpp  test_loading.h  test_loading_imps.cpp  test_loading_imps.h  test_peb_lookup.cpp  (+5 more)
tests/test_case1/: CMakeLists.txt  main.cpp
tests/test_case2/: README.md
tests/test_case3/: CMakeLists.txt  checksum.cpp  checksum.h  main.cpp
tests/test_case4/: CMakeLists.txt  main.cpp
tests/test_case5/: CMakeLists.txt  main.cpp
tests/test_case5/test_case5_dll/: CMakeLists.txt  main.cpp  main.def
tests/test_case5/test_case5_dll/include/: api.h
tests/test_case6/: CMakeLists.txt  callback.h  main.cpp  main.h  sockets.cpp  sockets.h
tests/test_case7/: CMakeLists.txt  main.cpp
(+1356 files in other folders)
